--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "psr/http-client-implementation": "^1",
         "psr/http-factory": "^1.0.1",
         "psr/http-factory-implementation": "^1",
-        "psr/http-message": "^1.1",
+        "psr/http-message": "^1.1 || ^2.0",
         "psr/http-message-implementation": "^1",
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0"
@@ -41,7 +41,7 @@
         "symfony/cache": "^5.4 || ^6",
         "symfony/http-client": "^5.4 || ^6",
         "symfony/var-dumper": "^6.2",
-        "veewee/xml": "^2.6"
+        "veewee/xml": "^2.6 || ^3.0"
     },
     "provide": {
         "psr/http-server-handler-implementation": "^1.0"
